tests/tooling/fixtures/native/execution/positive/unary_plus_basic.objc3
module UnaryPlusBasic;

fn main() -> i32 {
  let base = 7;
  let lifted = +base;
  let nested = +(+(lifted + 2));
  return nested;
}
