tests/tooling/fixtures/native/execution/negative/block_comment_nested.objc3
module BlockCommentNested;

/* outer block comment
   /* nested block comment */
*/
fn main() -> i32 {
  return 0;
}
